SCM2.0 is INCOMPLETE !

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Home Page Controller ! with tailwind css</h1>
+      <h1>Home Page Controller !! with tailwind css</h1>
       <h2 data-th-text="'User 1 : ' + ${name1}"></h2>
       <h2 th:text="'User 2 : ' + ${name2}"></h2>
     </div>
